--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "giveaway-carnival",
   "version": "1.0.0",
   "main": "server/server.js",
+  "type": "module",
   "scripts": {
     "start": "node server/server.js"
   },
@@ -9,6 +10,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.0",
     "express": "^4.19.0",
-    "mongoose": "^8.0.0"
+    "pg": "^8.11.0"
   }
 }
