--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "giveaway-carnival",
+  "name": "givve-app",
   "version": "1.0.0",
-  "main": "server/server.js",
   "type": "module",
+  "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js"
   },
